--- a/index.html
+++ b/index.html
@@ -254,7 +254,6 @@
 							<h6 class="font-lite-black margin-t-10">GRADUATED IN MAY 2016(3 YEARS)</h6>
 							<p class="margin-t-30">
 								Merupakan salah satu Sekolah dasar yang berada di Kecamatan Ngunut Kabupaten Tulungagung.
-								Dan saya berada di kelas B.
 							</p>
 						</div><!-- education -->
 
@@ -263,7 +262,8 @@
 							<h5 class="font-yellow"><b>2017 - 2020</b></h5>
 							<h6 class="font-lite-black margin-t-10">GRADUATED IN MAY 2020(3 YEARS)</h6>
 							<p class="margin-t-30">
-
+								SMK Telkom Malang adalah pelopor Sekolah menengah kejuruan pertama di Indonesia di bidang Teknologi dan Informatika.
+								Berpengalaman dari tahun 1992 yang telah terakreditasi "A" dan mempunyai standart mutu ISO 9001:2015.
 							</p>
 						</div><!-- education -->
 					</div><!-- education-wrapper -->
@@ -346,7 +346,7 @@
 			<div class="row">
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="radial-prog-area margin-b-30">
-						<div class="radial-progress" data-prog-percent=".97">
+						<div class="radial-progress" data-prog-percent=".95">
 							<div></div>
 							<h6 class="progress-title">HTML5 & CSS3</h6>
 						</div>
@@ -355,7 +355,7 @@
 
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="radial-prog-area margin-b-30">
-						<div class="radial-progress" data-prog-percent=".88">
+						<div class="radial-progress" data-prog-percent=".85">
 							<div></div>
 							<h6 class="progress-title">WEB DESIGN</h6>
 						</div>
@@ -364,9 +364,9 @@
 
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="radial-prog-area margin-b-30">
-						<div class="radial-progress" data-prog-percent=".76">
+						<div class="radial-progress" data-prog-percent=".86">
 							<div></div>
-							<h6 class="progress-title">JAVA</h6>
+							<h6 class="progress-title">JAVA SCRIPT</h6>
 						</div>
 					</div><!-- radial-prog-area-->
 				</div><!-- col-sm-6-->
